--- a/lib/gstudy_web/templates/user/form.html.eex
+++ b/lib/gstudy_web/templates/user/form.html.eex
@@ -18,9 +18,19 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :email, class: "control-label" %>
-    <%= text_input f, :email, class: "form-control" %>
-    <%= error_tag f, :email %>
+    <%= inputs_for f, :credential, fn cf -> %>
+      <%= label cf, :email, class: "control-label" %>
+      <%= text_input cf, :email, class: "form-control" %>
+      <%= error_tag cf, :email %>
+    <% end %>
+  </div>
+
+  <div class="form-group">
+    <%= inputs_for f, :credential, fn cf-> %>
+      <%= label cf, :password, class: "control-label" %>
+      <%= password_input cf, :password, class: "form-control" %>
+      <%= error_tag cf, :password %>
+    <% end %>
   </div>
 
   <div class="form-group">
