--- a/lib/gstudy_web/templates/framework/form.html.eex
+++ b/lib/gstudy_web/templates/framework/form.html.eex
@@ -18,6 +18,6 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Add Topic", class: "btn btn-primary" %>
   </div>
 <% end %>
