Fix remove button
Remove button was not properly configured in javascript for newly
added rows

--- a/lib/gstudy_web/templates/topic/form.html.eex
+++ b/lib/gstudy_web/templates/topic/form.html.eex
@@ -7,8 +7,8 @@
 
     <div class="form-group">
         <%= label f, :name, class: "control-label" %>
-        <%= text_input f, :title, class: "form-control" %>
-        <%= error_tag f, :title %>
+        <%= text_input f, :name, class: "form-control" %>
+        <%= error_tag f, :name %>
     </div>
 
     <%# Add links here %>
